<resources>
    <string name="app_name">ToDo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="swipe_left_on_card_to_delete_it">Swipe left on card to delete it!</string>
    <string name="due_date_and_time">Due Date and Time</string>
    <string name="add_new_task_to_list">Add new task to list</string>
    <string name="no_data_available">No data available</string>
    <string name="update_current_due_date_and_time">Update current due date and time</string>
    <string name="select_due_date_and_time">Select due date and time.</string>
    <!--    TODO: Update notification channel description-->
    <string name="notification_channel_description">notification desciption</string>

    <string name="timeAndDate">%1$s/%2$s/%3$s, %4$s:%5$s %6$s</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

</resources>