<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.add.AddFragment">

    <EditText
        android:id="@+id/title_et"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:inputType="textPersonName"
        android:hint="@string/title"
        android:background="@android:color/transparent"
        android:autofillHints="title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/priorities_spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:entries="@array/priorities"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_et" />

    <LinearLayout
        android:id="@+id/dueDateAndTime_ll"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/priorities_spinner">

        <TextView
            android:id="@+id/dueDateAndTime_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:hint="@string/due_date_and_time"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/dateAndTimePicker_iv"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="24dp"
            android:contentDescription="@string/select_due_date_and_time"
            android:src="@drawable/ic_date_and_time" />
    </LinearLayout>

    <EditText
        android:id="@+id/description_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:hint="@string/description"
        android:autofillHints="description"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dueDateAndTime_ll" />

</androidx.constraintlayout.widget.ConstraintLayout>