<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".fragments.update.UpdateFragment">

        <EditText
            android:id="@+id/current_title_et"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:autofillHints="title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Spinner
            android:id="@+id/current_priorities_spinner"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:entries="@array/priorities"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_title_et" />

        <LinearLayout
            android:id="@+id/current_dueDateAndTime_ll"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:orientation="horizontal"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_priorities_spinner">

            <TextView
                android:id="@+id/current_dueDateAndTime_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/due_date_and_time"
                android:textColor="@color/grayAccent"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/current_dateAndTimePicker_iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/update_current_due_date_and_time"
                android:src="@drawable/ic_date_and_time" />
        </LinearLayout>

        <EditText
            android:id="@+id/current_description_et"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="16dp"
            android:paddingEnd="24dp"
            android:autofillHints="Description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_dueDateAndTime_ll" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>